# stock-weekly-report

./: .gitignore  .npmignore  README.md  cli.py  config.yaml.example  config_manager.py  fetch_episodes.py  mcp_server.py  package.json  pipeline.py  pyproject.toml  requirements.txt  run.sh  send_report.py  transcribe.py  upload_to_notebooklm.py
scripts/: postinstall.js  preuninstall.js
